# hot

./: .dockerignore  .env.example  .gitignore  .ignore  AGENTS.md  BRAND.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  about.toml  hot.hot  hot.test.hot  pg.pkg.test.hot  pg.redis.test.hot  redis.pkg.test.hot  store-load.hot
crates/hot/: Cargo.toml  build.rs
crates/hot/src/: auth.rs  blob.rs  build.rs  build_info.rs  bundle.rs  cache.rs  check.rs  context_encryption.rs  deploy.rs  discovery.rs  domain.rs  domain_provider.rs  email.rs  env.rs  file_storage.rs  hasher.rs  lib.rs  log.rs  lsp.rs  net.rs  notification_queue.rs  outbound.rs  permission.rs  product.rs  profile.rs  project.rs  redis.rs  resources.rs  runtime_budget.rs  secret_scan.rs  signal.rs  skill_codegen.rs  storage.rs  time_range.rs  val.rs  version.rs  webhook_url.rs
crates/hot/src/api/: server.rs
crates/hot/src/data/: mod.rs  msg.rs  serialization.rs
crates/hot/src/db/: access.rs  agent.rs  alert.rs  api_key.rs  blob.rs  build.rs  call.rs  context.rs  domain.rs  email_queue.rs  email_verification.rs  entity_cache.rs  env.rs  event.rs  event_handler.rs  features.rs  file.rs  file_upload.rs  hierarchy.rs  invite.rs  mcp_tool.rs  mod.rs  org.rs  org_note.rs  port.rs  project.rs  run.rs  schedule.rs  schedule_log.rs  scheduler_state.rs  search.rs  service_key.rs  session.rs  sqlite.rs  stream.rs  subscription.rs  task.rs  team.rs  user.rs  webhook.rs  (+1 more)
crates/hot/src/lang/: ast.rs  bytecode.rs  display.rs  errors.rs  fmt.rs  json_schema.rs  lexer.rs  mod.rs  parser.rs  project.rs  refs.rs  repl.rs  user_code.rs
crates/hot/src/pkg/: docs.rs  docs_html.rs  mod.rs
crates/hot/src/queue/: mem.rs  mod.rs  streams.rs
crates/hot/src/store/: embedding.rs  mod.rs  postgres.rs  sqlite.rs
crates/hot/src/stream/: mem.rs  mod.rs  streams.rs
crates/hot/tests/: postgres_queue_correctness.rs  queue_wait_load.rs  task_integration.rs  tool_schema_extraction.rs  type_checking_errors.rs
crates/hot_api/: Cargo.toml
crates/hot_api/src/: access_log.rs  auth.rs  client_ip.rs  domain_resolver.rs  lib.rs  models.rs  openapi.rs  rate_limit.rs  server.rs
crates/hot_api/src/handlers/: blobs.rs  builds.rs  context.rs  domains.rs  env.rs  event_handlers.rs  events.rs  files.rs  health.rs  mcp.rs  mod.rs  org.rs  projects.rs  request.rs  runs.rs  schedules.rs  service_keys.rs  sessions.rs  streams.rs  webhook.rs
crates/hot_api/tests/: integration_tests.rs
crates/hot_app/: Cargo.toml  build.rs
crates/hot_app/src/: auth.rs  billing_provider.rs  build_cache.rs  build_info.rs  database_bootstrap.rs  email.rs  lib.rs  oauth.rs  rate_limit.rs  server.rs  slug.rs  source_browser.rs  test_support.rs  timezone.rs
crates/hot_app/src/handlers/: account.rs  agent_graph.rs  agents.rs  alerts.rs  auth.rs  billing.rs  billing_form.rs  contexts.rs  dashboard.rs  docs.rs  domains.rs  envs.rs  events.rs  files.rs  hierarchy.rs  invites.rs  keys.rs  list_query.rs  mcp_tools.rs  mod.rs  oauth.rs  orgs.rs  projects.rs  runs.rs  schedules.rs  service_keys.rs  source_browser.rs  stores.rs  stream_graph.rs  streams.rs  tasks.rs  teams.rs  webhook_endpoints.rs  webhooks.rs
crates/hot_app/src/routes/: mod.rs
crates/hot_app/src/templates/: mod.rs
crates/hot_app/templates/: _org_handle_fields.html  account.html  account_notifications.html  agents_detail.html  agents_list.html  billing.html  check_email.html  checkout_form.html  checkout_success.html  claim_handle.html  contexts_edit.html  contexts_index.html  contexts_list.html  contexts_new.html  dashboard.html  docs_index.html  docs_layout.html  docs_namespace.html  domains_detail.html  domains_list.html  domains_new.html  entry_detail.html  env_switch_prompt.html  envs_edit.html  envs_list.html  envs_new.html  event_handlers_list.html  events_detail.html  events_detail_table.html  events_list.html  files_detail.html  files_list.html  invite_accept.html  keys_edit.html  keys_list.html  keys_new.html  mcp_service_detail.html  mcp_tools_list.html  oauth_select_email.html  org_billing.html  (+52 more)
crates/hot_app/templates/alerts/: channels_edit.html  channels_list.html  channels_new.html  destination_verification.html  destinations_edit.html  destinations_list.html  destinations_new.html  history_detail.html  history_list.html  subscriptions_edit.html  subscriptions_list.html  subscriptions_new.html
crates/hot_app/templates/components/: access_attribution.html  confirm_modal.html  create_org_banner.html  dashboard_activity_overview.html  dashboard_cancelled_runs_rows.html  dashboard_chart_skeleton.html  dashboard_failed_runs_rows.html  dashboard_failed_tasks_rows.html  dashboard_filters.html  dashboard_hero_metrics.html  dashboard_issues_banner.html  dashboard_quick_issues.html  dashboard_recent_activity_tabs.html  dashboard_recent_events_rows.html  dashboard_recent_events_table.html  dashboard_recent_runs_rows.html  dashboard_recent_runs_table.html  dashboard_recent_streams_rows.html  dashboard_recent_streams_table.html  (+18 more)
crates/hot_app/tests/: http_blob_rehydration.rs  http_run_rerun.rs  http_run_stream_graph.rs  http_signup_flow.rs  http_stores.rs  signup_flow.rs
crates/hot_cli/: .gitignore  Cargo.toml  build.rs
crates/hot_cli/debian/: postinst  prerm
crates/hot_cli/src/: cli.rs  conf.rs  lib.rs  main.rs  profile.rs  update.rs
crates/hot_docs/: Cargo.toml
crates/hot_docs/src/: lib.rs  main.rs
crates/hot_lsp/: Cargo.toml  build.rs
crates/hot_lsp/src/: lib.rs
crates/hot_scheduler/: Cargo.toml
crates/hot_scheduler/src/: lib.rs  scheduler.rs  server.rs
crates/hot_task_worker/: Cargo.toml  build.rs
crates/hot_task_worker/src/: box_limits.rs  cni.rs  data_volume.rs  executor.rs  file_server.rs  lib.rs  log_accumulator.rs  orphan_reaper.rs  resource_budget.rs  shutdown.rs  task_lease.rs
crates/hot_task_worker/tests/: shutdown_integration.rs
crates/hot_worker/: Cargo.toml  build.rs
crates/hot_worker/src/: alert_worker.rs  build_info.rs  lib.rs  notification_worker.rs  server.rs
crates/hotbox/: Cargo.toml
crates/hotbox/src/: client.rs  main.rs
(+1243 files in other folders)
