[package]
name = "hot_worker"
version.workspace = true
edition.workspace = true
description = "Hot event and job worker"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
ahash = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
hot = { workspace = true }
reqwest = { workspace = true }
fd-lock = { workspace = true }
zstd = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

# ONNX Runtime (used by fastembed) has no prebuilt binaries for Windows ARM64
# or macOS Intel when using the downloaded-binaries backend.
[target.'cfg(not(any(all(target_os = "windows", target_arch = "aarch64"), all(target_os = "macos", target_arch = "x86_64"))))'.dependencies]
hot = { workspace = true, features = ["local-embeddings"] }
