[package]
name = "hotbox"
version.workspace = true
edition.workspace = true
description = "Container file access helper for Hot tasks"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
